[gd_scene load_steps=3 format=3 uid="uid://b8h7qnxuuj8xc"]

[ext_resource type="Script" path="res://scripts/BaseTower.gd" id="1_tower"]

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_click"]
size = Vector2(48, 48)

[node name="BaseTower" type="Area2D"]
script = ExtResource("1_tower")

[node name="TowerBase" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-24, -24, 24, -24, 24, 24, -24, 24)
color = Color(0.3, 0.7, 0.3, 1)

[node name="TowerBarrel" type="Node2D" parent="."]

[node name="BarrelVisual" type="Polygon2D" parent="TowerBarrel"]
polygon = PackedVector2Array(-4, -8, 4, -8, 6, -30, -6, -30)
color = Color(0.2, 0.5, 0.2, 1)

[node name="RangeCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_range")

[node name="ClickCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_click")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="RangeIndicator" type="Polygon2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.3)
z_index = -1
polygon = PackedVector2Array()
color = Color(0.5, 1, 0.5, 0.3)